--- a/Graphics/Rnw_Source/ggplot2_sol.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_sol.Rnw
@@ -15,12 +15,22 @@ There's not really much to add for this chapter. Move on to the next one.
 
 \chapter{Quickly Exploring Data}
 
+\newpage
+
 \begin{enumerate}
   \item Produce the following plot with the {\texttt mtcars} dataset. It's built into R so you do not need to load any packages:
   
   <<fig=TRUE, echo=TRUE>>=
     plot(mtcars$wt, mtcars$mpg)
   @
+  
+  \newpage
+  
+  \item Produce the following plot with the {\texttt mtcars} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      plot(mtcars$mpg, mtcars$wt)
+    @
   
   \newpage
   
@@ -33,6 +43,15 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt mtcars} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      qplot(mtcars$mpg, mtcars$wt)
+    @
+    
+  \newpage
+  
   \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
   
     <<fig=TRUE, echo=TRUE>>=
@@ -41,7 +60,7 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
-  \item Produce the following plot. It's the same as the prior plot, but with points added:
+  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
   
     <<fig=TRUE, echo=TRUE>>=
       plot(pressure$temperature, pressure$pressure, type = "l")
@@ -50,7 +69,7 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
-  \item Produce the follwing plot. This is the same as the prior plot, but with another line with points added and coloured red:
+  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
     
     <<fig=TRUE, echo=TRUE>>=
       plot(pressure$temperature, pressure$pressure, type = "l")
@@ -62,7 +81,19 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
-  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt pressure} dataset:
+  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
+    
+    <<fig=TRUE, echo=TRUE>>=
+      plot(pressure$temperature, pressure$pressure, type = "l")
+      points(pressure$temperature, pressure$pressure)
+  
+      lines(pressure$temperature, pressure$pressure/2, col="blue")
+      points(pressure$temperature, pressure$pressure/2, col="blue")
+    @
+  
+  \newpage
+  
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
   
     <<fig=TRUE, echo=TRUE>>=
       library(ggplot2)
