--- a/Graphics/Rnw_Source/ggplot2_ex.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_ex.Rnw
@@ -40,7 +40,21 @@ There's not really much to add for this chapter. Move on to the next one.
       library(ggplot2)
       qplot(mtcars$wt, mtcars$mpg)
     @
+    
+  \newpage
   
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt mtcars dataset}:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(ggplot2)
+      qplot(wt, mpg, data=mtcars)
+    @
+    
+    <<eval=FALSE, echo=FALSE>>=
+      #Alternative Solution
+      library(ggplot2)
+      ggplot(mtcars, aes(x=wt,y=mpg))+geom_point()
+    @
   \newpage
   
   \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt mtcars} dataset:
@@ -69,7 +83,7 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
-  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
+  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages. The height of the red line is one-half of the height of the black line at all points:
     
     <<fig=TRUE, echo=FALSE>>=
       plot(pressure$temperature, pressure$pressure, type = "l")
@@ -81,7 +95,7 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
-  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
+  \item Produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages. The height of the blue line is one-half of the height of the black line at all points:
     
     <<fig=TRUE, echo=FALSE>>=
       plot(pressure$temperature, pressure$pressure, type = "l")
@@ -102,6 +116,104 @@ There's not really much to add for this chapter. Move on to the next one.
   
   \newpage
   
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(ggplot2)
+      qplot(temperature, pressure, data=pressure, geom="line")
+    @
+    
+    <<eval=FALSE, echo=FALSE>>=
+      #Alternative Solution
+      library(ggplot2)
+      ggplot(pressure, aes(x=temperature, y=pressure))+geom_line()
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt pressure} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(ggplot2)
+      qplot(temperature, pressure, data=pressure, geom=c("line", "point"))
+    @
+    
+    <<eval=FALSE, echo=FALSE>>=
+      library(ggplot2)
+      ggplot(pressure, aes(x=temperature, y=pressure)) + geom_line() + geom_point()
+    @
+    
+  \newpage
+  
+  \item Produce the following plot with the {\texttt BOD} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      barplot(BOD$demand, names.arg=BOD$Time)
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt MASS} package and produce the following plot with the {\texttt Animals} dataset:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(MASS)
+      barplot(Animals$brain, names.arg=row.names(Animals), las=2)
+    @
+    
+  \newpage
+    
+  \item Load the {\texttt MASS} package and produce the following plot with the {\texttt Animals} dataset:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(MASS)
+      barplot(Animals$body, names.arg=row.names(Animals), las=2)
+    @
+  \newpage
+  
+  \item Produce the following plot with the {\texttt mtcars} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      barplot(table(mtcars$cyl))
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt MASS} package and produce the following plot with the {\texttt Aids2} dataset:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(MASS)
+      barplot(table(Aids2$state))
+    @
+  
+  \newpage
+  
+  \item Load the {\texttt MASS} package and produce the following plot with the {\texttt Aids2} dataset:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(MASS)
+      barplot(table(Aids2$T.categ))
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt BOD} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+      library(ggplot2)
+      qplot(BOD$Time, BOD$demand, geom="bar", stat="identity")
+    @
+  
+  \newpage
+  
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt BOD} dataset. It's built into R so you do not need to load any packages:
+  
+    <<fig=TRUE, echo=FALSE>>=
+    library(ggplot2)
+    qplot(factor(BOD$Time), BOD$demand, geom="bar", stat="identity")
+    @
+    
+  \newpage
+ 
 \end{enumerate}
 
 \end{document}
