added more problems and some screenshots

--- a/Graphics/Rnw_Source/ggplot2_ex.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_ex.Rnw
@@ -474,6 +474,26 @@ geom="boxplot")
 
 \chapter{Miscellaneous}
 
+\newpage
+
+\begin{enumerate}
+  
+  \item Load the package {\texttt ggplot2} and produce the following 5 charts from the {\texttt bacteria} dataset from the {\texttt MASS} package using a single loop. Be sure to remove the ID variable from your dataset:
+
+    <<fig=TRUE,echo=FALSE, warning=FALSE, message=FALSE>>=
+      library(ggplot2)
+      library(MASS)
+
+      bacteria2 <- bacteria[which(names(bacteria) != "ID")]
+
+      for(i in 1:length(bacteria2)){
+        print(ggplot(bacteria2,aes_string(x=names(bacteria2[i]))) + 
+                geom_histogram())
+      }
+    @
+    
+\end{enumerate}
+
 \chapter{Actuarial Graphics}
 
 \end{document}
