--- a/Graphics/Rnw_Source/ggplot2_sol.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_sol.Rnw
@@ -504,6 +504,29 @@ geom="boxplot")
         geom_histogram(colour="black",fill="steelblue1")
     @
   
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt Mass} packages and produce the following plot with the {\texttt forbes} dataset:
+  
+    <<fig=TRUE,echo=TRUE>>=
+      library(ggplot2)
+      library(MASS)
+      plot(pres ~ bp,data=forbes, main = "Boiling Points in the Alps", 
+        xlab="Boiling point", 
+        ylab="Barometric Pressure")
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} package and produce the following plot with the {\texttt GAGurine} dataset:
+  
+  <<fig=TRUE, echo=TRUE>>=
+    library(ggplot2)
+    library(MASS)
+    ggplot(GAGurine,aes(x=Age,y=GAG))+geom_point()
+  @
+  
+  
     
 \end{enumerate}
 
