--- a/Graphics/Rnw_Source/ggplot2_ex.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_ex.Rnw
@@ -655,9 +655,10 @@ geom="boxplot")
     
   \newpage
   
-  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt upc} dataset (Run the following code first):
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt upc} dataset (run the following code first):
   
     <<echo=TRUE, results=FALSE>>=
+      library(ggplot2)
       library(gcookbook)
       upc <- subset(uspopchange, rank(Change)>40)
     @
@@ -671,6 +672,19 @@ geom="boxplot")
     
   \newpage
   
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt csub} dataset (run the following code first):
+  
+    <<echo=TRUE, results=FALSE>>=
+      library(ggplot2)
+      library(gcookbook)
+      csub <- subset(climate, Source=="Berkeley" & Year >= 1900)
+      csub$pos <- csub$Anomaly10y >= 0
+    @
+    
+    <<fig=TRUE, echo=FALSE>>=
+      ggplot(csub, aes(x=Year, y=Anomaly10y, fill=pos)) +
+        geom_bar(stat="identity", position="identity")
+    @
     
   \newpage
   
