--- a/Graphics/Rnw_Source/ggplot2_sol.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_sol.Rnw
@@ -589,6 +589,16 @@ geom="boxplot")
         geom_bar(position="dodge")
     @
     
+    <<eval=FALSE, echo=TRUE>>=
+      # Alternative solutions
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(width=0.9, position=position_dodge())
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(position=position_dodge(0.9))
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(width=0.9, position=position_dodge(width=0.9))
+    @
+    
   \newpage
   
   \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
@@ -703,6 +713,61 @@ geom="boxplot")
                colour="black", size=0.25) +
       scale_fill_manual(values=c("#CCEEFF", 
                                  "#FFDDDD"), guide=FALSE)
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt pg\_mean} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(pg_mean, aes(x=group, y=weight)) + 
+        geom_bar(stat="identity")
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt pg\_mean} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(pg_mean, aes(x=group, y=weight)) + 
+        geom_bar(stat="identity", width = 0.5)
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt pg\_mean} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(pg_mean, aes(x=group, y=weight)) + 
+        geom_bar(stat="identity", width = 1)
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(stat="identity", width=0.5, position="dodge")
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(stat="identity", width=0.5, 
+                 position=position_dodge(0.7))
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) +
+        geom_bar(stat="identity")
     @
     
   \newpage
