--- a/Graphics/Rnw_Source/ggplot2_sol.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_sol.Rnw
@@ -775,6 +775,9 @@ geom="boxplot")
   \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
   
     <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+      
       ggplot(cabbage_exp,aes(x=Date, y=Weight, fill=Cultivar)) +
         geom_bar(stat="identity") + 
         guides(fill=guide_legend(reverse=TRUE))
@@ -785,14 +788,46 @@ geom="boxplot")
   \item Load the {\texttt ggplot2, plyr} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
   
     <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
       library(plyr)
+      library(gcookbook)
+
       ggplot(cabbage_exp, aes(x=Date, y=Weight, 
                         fill=Cultivar, order=desc(Cultivar))) +
       geom_bar(stat="identity")
     @
     
   \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+      
+      ggplot(cabbage_exp, aes(x=Date, y=Weight, fill=Cultivar)) + 
+        geom_bar(stat="identity", colour="black") +
+        guides(fill=guide_legend(reverse=TRUE)) + 
+        scale_fill_brewer(palette="Pastel1")
+    @
     
+  \newpage
+  
+  \item Load the {\texttt ggplot2, gcookbook,} and {\texttt plyr} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+      library(plyr)
+
+      ce <- ddply(cabbage_exp, "Date", transform,
+            percent_weight = Weight / sum(Weight) * 100)
+
+      ggplot(ce, aes(x=Date, y=percent_weight, fill=Cultivar)) +
+        geom_bar(stat="identity")
+    @
+    
+  \newpage
 %%%%% ADDITIONAL PROBLEMS HERE %%%%%
 
   \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
