--- a/Graphics/Rnw_Source/ggplot2_sol.Rnw
+++ b/Graphics/Rnw_Source/ggplot2_sol.Rnw
@@ -828,6 +828,52 @@ geom="boxplot")
     @
     
   \newpage
+  
+  \item Load the {\texttt ggplot2, gcookbook,} and {\texttt plyr} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+  
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+      library(plyr)
+
+      ce <- ddply(cabbage_exp, "Date", transform,
+            percent_weight = Weight / sum(Weight) * 100)
+
+      ggplot(ce, aes(x=Date, y=percent_weight, fill=Cultivar)) +
+        geom_bar(stat="identity", colour="black") +
+        guides(fill=guide_legend(reverse=TRUE)) +
+        scale_fill_brewer(palette="Pastel1")
+    @
+    
+  \newpage
+    
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+    
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+
+      ggplot(cabbage_exp,aes(x=interaction(Date,Cultivar),y=Weight)) + 
+        geom_bar(stat="identity") +
+        geom_text(aes(label=Weight), vjust=1.5, colour="white")
+
+    @
+    
+  \newpage
+  
+  \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
+    
+    <<fig=TRUE, echo=TRUE>>=
+      library(ggplot2)
+      library(gcookbook)
+
+      ggplot(cabbage_exp, aes(x=interaction(Date, Cultivar), y=Weight)) +
+        geom_bar(stat="identity") +
+        geom_text(aes(label=Weight), vjust= -0.2)
+
+    @
+    
+  \newpage
 %%%%% ADDITIONAL PROBLEMS HERE %%%%%
 
   \item Load the {\texttt ggplot2} and {\texttt gcookbook} packages and produce the following plot with the {\texttt cabbage\_exp} dataset:
